--- a/session3_stats_reorganisation/materiel/statistiques.Rmd
+++ b/session3_stats_reorganisation/materiel/statistiques.Rmd
@@ -102,7 +102,7 @@ Nous pouvons donc tester si l'effet d'un traitement sur la biomasse est **signif
 
 Un test statistique se déroule globalement en 4 étapes : 
 
-+ **Définir une hypothèse nulle : ** cette hypothèse représente souvent l'aléatoire, l'absence d'effet d'un traitement, l'absence de différence entre deux groupes, on la qualifie parfois de l'hypothèse "ennuyeuse". Dans notre cas, il s'agit d'une égalité de moyennes entre nos deux groupes, nous nous plaçons dans le cas ou le traitement n'a pas d'effet sur la biomasse.
++ **Définir une hypothèse nulle : ** cette hypothèse représente souvent les effets aléatoires, l'absence d'effet d'un traitement, l'absence de différence entre deux groupes, on la qualifie parfois de l'hypothèse "ennuyeuse". Dans notre cas, il s'agit d'une égalité de moyennes entre nos deux groupes, nous nous plaçons dans le cas ou le traitement n'a pas d'effet sur la biomasse.
 
 + **Calculer une statistique de test observée : ** il s'agit d'une grandeur calculée sur les données, par exemple la différence de moyenne entre notre groupe traitement et notre groupe contrôle.
 
@@ -122,6 +122,7 @@ df <- data.frame(h0)
 density <- ggplot(data = df, aes(x=h0)) + geom_density(fill="grey", alpha = 0.2) + 
   theme_pubr() + xlab("Différence de moyennes") +xlab("Fréquence") +
   geom_vline(xintercept = observed_effect, color="darkblue", size=2)+ 
+  geom_vline(xintercept = 2.5, color="grey", size=1)+ 
   ggtitle("Statistique de test du traitement 1 comparée à la distribution nulle")
 
 d <- ggplot_build(density)$data[[1]]
